src/main/java/elmer/p1pigltin/antlr4/CodexLatinusParser.java
// Generated from CodexLatinus.g4 by ANTLR 4.9.2

package elmer.p1pigltin.antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CodexLatinusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEC_VARIABILES=1, SEC_MUNERA=2, SEC_MAIOR=3, FIN_PROGRAMA=4, FIN_BLOQUE=5, 
		KW_ESTO=6, KW_SERIES=7, KW_STRUCTURA=8, KW_RATIO=9, KW_ACTIO=10, KW_REDDERE=11, 
		KW_SI=12, KW_ALITER=13, KW_DUM=14, KW_FACERE=15, KW_PER=16, KW_PERGE=17, 
		KW_INTERRUMPE=18, NOT=19, KW_NUMERUS=20, KW_TEXTUM=21, KW_DECIMALIS=22, 
		KW_LITTERA=23, KW_BOOL=24, VERUM=25, FALSUS=26, EQ=27, NEQ=28, LE=29, 
		GE=30, AND=31, OR=32, INC=33, DEC=34, READ=35, PRINT=36, PLUS=37, MINUS=38, 
		STAR=39, SLASH=40, LT=41, GT=42, ASSIGN=43, LPAREN=44, RPAREN=45, LBRACE=46, 
		RBRACE=47, LBRACK=48, RBRACK=49, COLON=50, SEMI=51, COMMA=52, DOT=53, 
		DECIMAL_LIT=54, NUMERUS_LIT=55, TEXTUM_LIT=56, LITTERA_LIT=57, IDENT=58, 
		LINE_COMMENT=59, BLOCK_COMMENT=60, WS=61;
	public static final int
		RULE_program = 0, RULE_globalSection = 1, RULE_globalDeclaration = 2, 
		RULE_funcSection = 3, RULE_mainSection = 4, RULE_functionDefinition = 5, 
		RULE_ratioFunction = 6, RULE_actioFunction = 7, RULE_paramList = 8, RULE_param = 9, 
		RULE_localVarSection = 10, RULE_localDeclaration = 11, RULE_type = 12, 
		RULE_primitiveType = 13, RULE_varDeclaration = 14, RULE_arrayDeclaration = 15, 
		RULE_arrayType = 16, RULE_arrayInit = 17, RULE_exprList = 18, RULE_structDefinition = 19, 
		RULE_structMember = 20, RULE_structMemberSep = 21, RULE_memberType = 22, 
		RULE_structVarDeclaration = 23, RULE_blockEnd = 24, RULE_structLiteral = 25, 
		RULE_structFieldInit = 26, RULE_statement = 27, RULE_assignment = 28, 
		RULE_lvalue = 29, RULE_printStmt = 30, RULE_readStmt = 31, RULE_ifStmt = 32, 
		RULE_elseIfClause = 33, RULE_elseClause = 34, RULE_whileStmt = 35, RULE_doWhileStmt = 36, 
		RULE_forStmt = 37, RULE_forInit = 38, RULE_forUpdate = 39, RULE_incDecStmt = 40, 
		RULE_functionCallStmt = 41, RULE_functionCall = 42, RULE_argList = 43, 
		RULE_returnStmt = 44, RULE_breakStmt = 45, RULE_continueStmt = 46, RULE_expr = 47, 
		RULE_logicalOrExpr = 48, RULE_logicalAndExpr = 49, RULE_equalityExpr = 50, 
		RULE_relationalExpr = 51, RULE_additiveExpr = 52, RULE_multiplicativeExpr = 53, 
		RULE_unaryExpr = 54, RULE_postfixExpr = 55, RULE_atom = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "globalSection", "globalDeclaration", "funcSection", "mainSection", 
			"functionDefinition", "ratioFunction", "actioFunction", "paramList", 
			"param", "localVarSection", "localDeclaration", "type", "primitiveType", 
			"varDeclaration", "arrayDeclaration", "arrayType", "arrayInit", "exprList", 
			"structDefinition", "structMember", "structMemberSep", "memberType", 
			"structVarDeclaration", "blockEnd", "structLiteral", "structFieldInit", 
			"statement", "assignment", "lvalue", "printStmt", "readStmt", "ifStmt", 
			"elseIfClause", "elseClause", "whileStmt", "doWhileStmt", "forStmt", 
			"forInit", "forUpdate", "incDecStmt", "functionCallStmt", "functionCall", 
			"argList", "returnStmt", "breakStmt", "continueStmt", "expr", "logicalOrExpr", 
			"logicalAndExpr", "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
			"unaryExpr", "postfixExpr", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'VARIABILES'", "'MUNERA'", "'MAIOR'", "'FINIS'", "'finis'", "'esto'", 
			"'series'", "'structura'", "'ratio'", "'actio'", "'reddere'", "'si'", 
			"'aliter'", "'dum'", "'facere'", "'per'", "'perge'", "'interrumpe'", 
			"'non'", "'numerus'", "'textum'", "'decimalis'", "'littera'", "'bool'", 
			"'verum'", "'falsus'", "'=='", "'!='", "'<='", "'>='", "'&&'", "'||'", 
			"'++'", "'--'", "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", 
			"'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "';'", "','", 
			"'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEC_VARIABILES", "SEC_MUNERA", "SEC_MAIOR", "FIN_PROGRAMA", "FIN_BLOQUE", 
			"KW_ESTO", "KW_SERIES", "KW_STRUCTURA", "KW_RATIO", "KW_ACTIO", "KW_REDDERE", 
			"KW_SI", "KW_ALITER", "KW_DUM", "KW_FACERE", "KW_PER", "KW_PERGE", "KW_INTERRUMPE", 
			"NOT", "KW_NUMERUS", "KW_TEXTUM", "KW_DECIMALIS", "KW_LITTERA", "KW_BOOL", 
			"VERUM", "FALSUS", "EQ", "NEQ", "LE", "GE", "AND", "OR", "INC", "DEC", 
			"READ", "PRINT", "PLUS", "MINUS", "STAR", "SLASH", "LT", "GT", "ASSIGN", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COLON", 
			"SEMI", "COMMA", "DOT", "DECIMAL_LIT", "NUMERUS_LIT", "TEXTUM_LIT", "LITTERA_LIT", 
			"IDENT", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CodexLatinus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CodexLatinusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public MainSectionContext mainSection() {
			return getRuleContext(MainSectionContext.class,0);
		}
		public TerminalNode FIN_PROGRAMA() { return getToken(CodexLatinusParser.FIN_PROGRAMA, 0); }
		public TerminalNode SEMI() { return getToken(CodexLatinusParser.SEMI, 0); }
		public TerminalNode EOF() { return getToken(CodexLatinusParser.EOF, 0); }
		public GlobalSectionContext globalSection() {
			return getRuleContext(GlobalSectionContext.class,0);
		}
		public FuncSectionContext funcSection() {
			return getRuleContext(FuncSectionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEC_VARIABILES) {
				{
				setState(114);
				globalSection();
				}
			}

			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEC_MUNERA) {
				{
				setState(117);
				funcSection();
				}
			}

			setState(120);
			mainSection();
			setState(121);
			match(FIN_PROGRAMA);
			setState(122);
			match(SEMI);
			setState(123);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalSectionContext extends ParserRuleContext {
		public TerminalNode SEC_VARIABILES() { return getToken(CodexLatinusParser.SEC_VARIABILES, 0); }
		public TerminalNode GT() { return getToken(CodexLatinusParser.GT, 0); }
		public List<GlobalDeclarationContext> globalDeclaration() {
			return getRuleContexts(GlobalDeclarationContext.class);
		}
		public GlobalDeclarationContext globalDeclaration(int i) {
			return getRuleContext(GlobalDeclarationContext.class,i);
		}
		public GlobalSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterGlobalSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitGlobalSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitGlobalSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalSectionContext globalSection() throws RecognitionException {
		GlobalSectionContext _localctx = new GlobalSectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(SEC_VARIABILES);
			setState(126);
			match(GT);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_ESTO) | (1L << KW_SERIES) | (1L << KW_STRUCTURA))) != 0)) {
				{
				{
				setState(127);
				globalDeclaration();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalDeclarationContext extends ParserRuleContext {
		public StructVarDeclarationContext structVarDeclaration() {
			return getRuleContext(StructVarDeclarationContext.class,0);
		}
		public StructDefinitionContext structDefinition() {
			return getRuleContext(StructDefinitionContext.class,0);
		}
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public GlobalDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterGlobalDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitGlobalDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitGlobalDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalDeclarationContext globalDeclaration() throws RecognitionException {
		GlobalDeclarationContext _localctx = new GlobalDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalDeclaration);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				structVarDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				structDefinition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				arrayDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				varDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncSectionContext extends ParserRuleContext {
		public TerminalNode SEC_MUNERA() { return getToken(CodexLatinusParser.SEC_MUNERA, 0); }
		public TerminalNode GT() { return getToken(CodexLatinusParser.GT, 0); }
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public FuncSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterFuncSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitFuncSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitFuncSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncSectionContext funcSection() throws RecognitionException {
		FuncSectionContext _localctx = new FuncSectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(SEC_MUNERA);
			setState(140);
			match(GT);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_RATIO || _la==KW_ACTIO) {
				{
				{
				setState(141);
				functionDefinition();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainSectionContext extends ParserRuleContext {
		public TerminalNode SEC_MAIOR() { return getToken(CodexLatinusParser.SEC_MAIOR, 0); }
		public TerminalNode GT() { return getToken(CodexLatinusParser.GT, 0); }
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterMainSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitMainSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitMainSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainSectionContext mainSection() throws RecognitionException {
		MainSectionContext _localctx = new MainSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mainSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(SEC_MAIOR);
			setState(148);
			match(GT);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_ESTO) | (1L << KW_REDDERE) | (1L << KW_SI) | (1L << KW_DUM) | (1L << KW_FACERE) | (1L << KW_PER) | (1L << KW_PERGE) | (1L << KW_INTERRUMPE) | (1L << READ) | (1L << PRINT) | (1L << IDENT))) != 0)) {
				{
				setState(151);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case KW_ESTO:
					{
					setState(149);
					varDeclaration();
					}
					break;
				case KW_REDDERE:
				case KW_SI:
				case KW_DUM:
				case KW_FACERE:
				case KW_PER:
				case KW_PERGE:
				case KW_INTERRUMPE:
				case READ:
				case PRINT:
				case IDENT:
					{
					setState(150);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionContext extends ParserRuleContext {
		public RatioFunctionContext ratioFunction() {
			return getRuleContext(RatioFunctionContext.class,0);
		}
		public ActioFunctionContext actioFunction() {
			return getRuleContext(ActioFunctionContext.class,0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterFunctionDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitFunctionDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitFunctionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDefinition);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_RATIO:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				ratioFunction();
				}
				break;
			case KW_ACTIO:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				actioFunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
